@@ -4,7 +4,13 @@ function on_ok() {
 }
 
 window.addEventListener("load", function (event) {
-  document.getElementById("tblatex-expr").value = window.arguments[1];
+  var marker = "__REPLACEME__";
+  var textarea = document.getElementById("tblatex-expr");
+  textarea.value = window.arguments[1];
+  var start = textarea.value.indexOf(marker);
+  textarea.focus();
+  if (start > -1)
+    textarea.setSelectionRange(start, start+marker.length);
 }, false);
 
 var prefs = Components.classes["@mozilla.org/preferences-service;1"]
